Updated index.html .main to remove height. Now height is determined by total height of all the child elements. Applied flex to body to align all content center. Changed style.css h2 attributes to have a specific size and border underneath. Moved .footer outside of container to fix it in one spot. Issue now is that there is no space between the bottom of main and the footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,64 @@
-h1 {
+
+h1, h2 {
     font-family: bowlby one sc;
 }
 
 h2 {
-    font-family: raleway;
+    font-size: 30px;
+    /* display: flex;
+    align-items: center; */
 }
 
+.headline {
+    flex: 0 0 100%;
+    border-bottom: 1px black solid;
+}
+
+img {
+    height: 100px;
+    width: 90px;
+}
+
+a:last-child {
+    border: 0px black solid;
+}
 p, a{
     font-family: 'slabo 27px';
 }
 
+body {
+    display: flex;
+    justify-content: center;
+}
 /* main container for adding flex to pages */
 .container {
     display: flex;
     flex-wrap: wrap;
+    width: 960px;
 }
 
 /* top has flex applied from .container, but is also applying flex to .logo and .menu */ 
 .top {
-    flex: 0 0 100%;
     display: flex;
     /* found this in the css-tricks flex tutorial */
     justify-content: space-between;
     align-items: center;
     width: 90%;
     margin: 0px auto 0px auto;
-    background-color: black;
+    background-color: gray;
     height: 50px;
 }
 
 .logo {
-    background: blue;
+    display: flex;
+    align-items: center;
+    background: darkslategray;
+    border-radius: 10px;
     color: white;
     font-size: 2em;
     margin: 0px 0px 0px 40px;
+    padding: 0px 5px 0px 5px;
+    height: 80%;
 }
 
 .menu {
@@ -44,18 +69,25 @@ p, a{
 /*using to add lines to the left of the links in the menu */
 .menu a {
     padding: 5px;
-    border-right: 1px white solid;
+    border-right: 2px white solid;
     color: white;
+    font-weight: 900;
+    letter-spacing: 2px;
 }
 
 .main {
-    background-color: green;
+    background-color: gray;
     display: flex;
     flex-wrap: wrap;
     margin: 50px auto 50px auto;
     width: 480px;
-    height: 600px;
+    /* height: 600px; */
     padding: 10px;
+    box-shadow: 5px 10px;
+}
+
+.main * {
+    margin: 10px 0px 10px 0px;
 }
 
 .footer {
@@ -64,17 +96,12 @@ p, a{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    bottom: 0px;
+    margin: 0px;
     background-color: black;
-    border-top: 2px red solid;
+    border-top: 2px gray solid;
     color: white;
     height: 50px;
-}
-
-header {
-    flex: 0 0 100%;
-}
-
-img {
-    height: 50px;
-    width: 50px;
+    width:100%;
 }
